fixed overlap mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -30,7 +30,7 @@ div {
 }
 
 h1 {
-  font: 500 30.61px 'Poppins', sans-serif;
+  font: 500 25px 'Poppins', sans-serif;
 }
 
 p {
